pubman: various changes, admin interface for authors, conferences

--- a/pubman/templates/pubman/conference_series_edit.html
+++ b/pubman/templates/pubman/conference_series_edit.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>PubMan Edit Author</title>
+  <title>PubMan Edit Conference Series</title>
 </head>
 
 <body>
-  <h1>PubMan &mdash; Edit Author</h1>
+  <h1>PubMan &mdash; Edit Conference Series</h1>
   <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
