--- a/pubman/templates/pubman/conference_series_new.html
+++ b/pubman/templates/pubman/conference_series_new.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>PubMan Edit Author</title>
+  <title>PubMan New Conference Series</title>
 </head>
 
 <body>
-  <h1>PubMan &mdash; Edit Author</h1>
+  <h1>PubMan &mdash; New Conference Series</h1>
   <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Save" />
+    <input type="submit" value="Create" />
   </form>
 </body>
 </html>
